--- a/browser/js/common/directives/carousel/carousel.html
+++ b/browser/js/common/directives/carousel/carousel.html
@@ -1,103 +1,26 @@
-
-<div class="container">
-  <div class="page-header">
-    <h1>Carousel with multi items with mobile support</h1>
-  </div>
-<div id="productCarousel" class="carousel slide">
-  <!-- Carousel items -->
+<div class="col-md-7">
+<div class="carousel slide" id="myCarousel">
   <div class="carousel-inner">
-  
-  <div class="item active">
-  <div class="row text-center">
-		<!-- ITEM-->
-        <div class="span3">
-			<div class="thumbnail product-item">
-				<a href="#"><img src="http://www.sitediscount.ru/flatscroller/images/flatphone.png"></a>
-			</div>
-			<h3>Product name</h3>
-			<p><a class="btn btn-large btn-block" href="http://www.bootstraptor.com">View details »</a></p>	
-        </div>
-		<!-- ITEM-->
-		
-		<!-- ITEM-->
-        <div class="span3">
-			<div class="thumbnail product-item">
-				<a href="#"><img src="http://www.sitediscount.ru/flatscroller/images/flatphone.png"></a>
-			</div>
-			<h3>Product name</h3>
-			<p><a class="btn btn-large btn-block" href="http://www.bootstraptor.com">View details »</a></p>	
-        </div>
-		<!-- ITEM-->
-		
-		<!-- ITEM-->
-        <div class="span3">
-			<div class="thumbnail product-item">
-				<a href="#"><img src="http://www.sitediscount.ru/flatscroller/images/flatphone.png"></a>
-			</div>
-			<h3>Product name</h3>
-			<p><a class="btn btn-large btn-block" href="http://www.bootstraptor.com">View details »</a></p>	
-        </div>
-		<!-- ITEM-->
-		
-		<!-- ITEM-->
-        <div class="span3">
-			<div class="thumbnail product-item">
-				<a href="#"><img src="http://www.sitediscount.ru/flatscroller/images/flatphone.png"></a>
-			</div>
-			<h3>Product name</h3>
-			<p><a class="btn btn-large btn-block" href="http://www.bootstraptor.com">View details »</a></p>	
-        </div>
-		<!-- ITEM-->
-	</div>
-	</div>
-	
-	<div class="item">
-	<div class="row text-center">
-		<!-- ITEM-->
-        <div class="span3">
-			<div class="thumbnail product-item">
-				<a href="#"><img src="http://placekitten.com/g/200/300"></a>
-			</div>
-			<h3>Product name</h3>
-			<p><a class="btn btn-large btn-block" href="http://www.bootstraptor.com">View details »</a></p>	
-        </div>
-		<!-- ITEM-->
-		
-		<!-- ITEM-->
-        <div class="span3">
-			<div class="thumbnail product-item">
-				<a href="#"><img src="http://placekitten.com/g/200/300"></a>
-			</div>
-			<h3>Product name</h3>
-			<p><a class="btn btn-large btn-block" href="http://www.bootstraptor.com">View details »</a></p>	
-        </div>
-		<!-- ITEM-->
-		
-		<!-- ITEM-->
-        <div class="span3">
-			<div class="thumbnail product-item">
-				<a href="#"><img src="http://placekitten.com/g/200/300"></a>
-			</div>
-			<h3>Product name</h3>
-			<p><a class="btn btn-large btn-block" href="http://www.bootstraptor.com">View details »</a></p>	
-        </div>
-		<!-- ITEM-->
-		
-		<!-- ITEM-->
-        <div class="span3">
-			<div class="thumbnail product-item">
-				<a href="#"><img src="http://placekitten.com/g/200/300"></a>
-			</div>
-			<h3>Product name</h3>
-			<p><a class="btn btn-large btn-block" href="http://www.bootstraptor.com">View details »</a></p>	
-        </div>
-		<!-- ITEM-->
-	</div>
-	</div>
-</div><!-- /INNER-->  
-	    <!-- Carousel nav -->
-  <a class="carousel-control left" href="#productCarousel" data-slide="prev"><i class="icon-chevron-left"></i></a>
-  <a class="carousel-control right" href="#productCarousel" data-slide="next"><i class="icon-chevron-right"></i></a>	
+    <div class="item active">
+      <div class="col-md-4"><a href="#"><img src="http://placehold.it/500/bbbbbb/fff&amp;text=1" class="img-responsive"></a></div>
+    </div>
+    <div class="item">
+      <div class="col-md-4"><a href="#"><img src="http://placehold.it/500/CCCCCC&amp;text=2" class="img-responsive"></a></div>
+    </div>
+    <div class="item">
+      <div class="col-md-4"><a href="#"><img src="http://placehold.it/500/eeeeee&amp;text=3" class="img-responsive"></a></div>
+    </div>
+    <div class="item">
+      <div class="col-md-4"><a href="#"><img src="http://placehold.it/500/f4f4f4&amp;text=4" class="img-responsive"></a></div>
+    </div>
+    <div class="item">
+      <div class="col-md-4"><a href="#"><img src="http://placehold.it/500/fcfcfc/333&amp;text=5" class="img-responsive"></a></div>
+    </div>
+    <div class="item">
+      <div class="col-md-4"><a href="#"><img src="http://placehold.it/500/f477f4/fff&amp;text=6" class="img-responsive"></a></div>
+    </div>
+  </div>
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev" ng-non-bindable><i class="glyphicon glyphicon-chevron-left"></i></a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next" ng-non-bindable><i class="glyphicon glyphicon-chevron-right"></i></a>
 </div>
-  
 </div>
