still working on it

--- a/browser/js/common/directives/sidebar/sidebar.html
+++ b/browser/js/common/directives/sidebar/sidebar.html
@@ -1,5 +1,6 @@
 <ul class = "side-nav fixed" style="width: 240px">
         <li class= "bold">
             <a class="item"> IPA </a>
+            {{categories}}
         </li>
     </ul>
