--- a/browser/js/common/directives/browse-list/browse-list.html
+++ b/browser/js/common/directives/browse-list/browse-list.html
@@ -1,3 +1,5 @@
-<ul>
-	<browseitem></browseitem>
+<ul class="browse-list">
+	<li ng-repeat="i in [1,2,3,4]" class="pull-right">
+		<browseitem></browseitem>
+	</li>
 </ul>
