--- a/browser/js/common/directives/sidebar/sidebar.html
+++ b/browser/js/common/directives/sidebar/sidebar.html
@@ -1,3 +1,3 @@
 <ul class="side-nav fixed">
-	<li> {{categories}}</li>
+	<li ng-repeat="category in categories" ng-click='goToCategory(category.id)'> {{category.cat_name}}</li>
 </ul>
