--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -7,7 +7,7 @@
             <li ng-repeat="item in items" ng-show="!item.auth || isLoggedIn()">
                 <a ui-sref-active="active" ui-sref="{{ item.state }}">{{ item.label }}</a>
             </li>
-            <li><span ui-sref="cart"class="glyphicon glyphicon-shopping-cart navbar-brand"></span><li>
+            <li><span ui-sref="cart"class="navbar-brand"><i class="fa fa-shopping-cart"></i></span><li>
         </ul>
         <button ng-show="!user" ui-sref="login" class="btn login-button">Login</button>
         <div ng-show="user" class="welcome">
