started doing checkout

--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -16,7 +16,7 @@
                     <li ng-repeat = "item in user.cart">{{item.item}}</li>
                     <li class="divider"></li>
                     <h6>Total: {{total}}</h6>
-                    <button type = "button" class = "btn btn-warning" ng-click = "goToChckout">Check out!</button>
+                    <button type = "button" class = "btn btn-warning" ng-click = "goToCheckout()">Check out!</button>
                 </ul>
             </div>
             <li><span ui-sref="cart"class="navbar-brand"><i class="fa fa-shopping-cart"></i></span><li>
