Add and edit beers working. Still needs form validation

--- a/browser/js/common/directives/editBeerForm/editBeerForm.html
+++ b/browser/js/common/directives/editBeerForm/editBeerForm.html
@@ -19,5 +19,5 @@
 		<input ng-model="editBeer.brewery_oid.name" ng-readonly="true" class="form-control" type="text" name="brewery"/>
 	</div>
 	
-	<input type="submit" class="form-control" ng-click="update()">
+	<input type="submit" class="btn btn-default submit" ng-click="update()" value="Submit"/>
 </form>
