--- a/browser/js/common/directives/addBeerForm/addBeerForm.html
+++ b/browser/js/common/directives/addBeerForm/addBeerForm.html
@@ -1,33 +1,47 @@
 <form>
-	<label for="name">Beer Name</label>
-	<input ng-model="editBeer.name" class="form-control" type="text" name="name" required/>
+	<div class="col-sm-6 col-md-6 col-lg-6">
+		<label for="name">Beer Name</label>
+		<input ng-model="editBeer.name" class="form-control" type="text" name="name" required/>
 
-	<label for="description">Description</label>
-	<input ng-model="editBeer.descript" class="form-control" type="text" name="desciption"/>
+		<label for="description">Description</label>
+		<input ng-model="editBeer.descript" class="form-control" type="text" name="desciption"/>
 
-	<label for="tags">Tags (comma delimited please)</label>
-	<input ng-model="editBeer.tags" class="form-control" type="text" name="tags"/>
+		<label for="tags">Tags (comma delimited please)</label>
+		<input ng-model="editBeer.tags" class="form-control" type="text" name="tags"/>
 
 
 
-	<div>
-		<select class="form-control">
-			<option value="-1" disabled selected>Select a Category</option>
-			<option ng-repeat="cat in categories" value="{{cat._id}}">{{cat.cat_name}}</option>
-		</select>
+		<div>
+			<label for="cat">Category</label>
+			<select name="cat" class="form-control" ng-model="editBeer.cat_oid" required>
+				<option value="-1" disabled selected>Select a Category</option>
+				<option ng-repeat="cat in categories" value="{{cat._id}}">{{cat.cat_name}}</option>
+			</select>
 
-		<select class="form-control">
-			<option value="-1" disabled selected>Select a Style</option>
-			<option ng-repeat="style in styles" value="{{style._id}}">{{style.style_name}}</option>
-		</select>
+			<label for="style">Style</label>
+			<select name="style" class="form-control" ng-model="editBeer.style_oid" required>
+				<option value="-1" disabled selected>Select a Style</option>
+				<option ng-repeat="style in styles" value="{{style._id}}">{{style.style_name}}</option>
+			</select>
 
-		<select class="form-control">
-			<option value="-1" disabled selected>Select a Brewery</option>
-			<option ng-repeat="brew in breweries" value="{{brew._id}}">{{brew.name}}</option>
-		</select>
+			<label for="brewery">Brewery</label>
+			<select name="brewery" class="form-control" ng-model="editBeer.brewery_oid" required>
+				<option value="-1" disabled selected>Select a Brewery</option>
+				<option ng-repeat="brew in breweries" value="{{brew._id}}">{{brew.name}}</option>
+			</select>
+		</div>
+
+	</div>
+	<div class="col-sm-6 col-md-6 col-lg-6">
+		<label for="abv">ABV</label>
+		<input ng-model="editBeer.abv" class="form-control" type="text" name="abv" required/>
+
+		<label for="price">Price</label>
+		<input ng-model="editBeer.price" class="form-control" type="text" name="price" required/>
+
+		<label for="stock">Stock</label>
+		<input ng-model="editBeer.stock" class="form-control" type="text" name="stock" required/>
 	</div>
 
-	
-
-	<input type="submit" class="form-control" ng-click="update(editBeer)">
+	<input type="submit" class="btn btn-default submit" ng-click="update()">
 </form>
