Dynamic Search Bar Working

--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -24,6 +24,14 @@
                     </div> -->
                 </ul>
             </div>
+            <li>    
+                <form name="searchForm" ng-submit="beerInfo(result)">
+                    <input type="text" placeholder="Search" ng-model='result' typeahead="beer.name for beer in getBeer($viewValue)" typeahead-loading="loadingBeers" typeahead-on-select="beerInfo(result)">
+                    <i ng-show="loadingBeers" class="glyphicon glyphicon-refresh" ></i>
+
+                    <button type='submit'> Submit </button>
+                </form>
+            </li>
         </ul>
         <button ng-show="!user" ui-sref="login" class="btn login-button">Login</button>
         <div ng-show="user" class="welcome">
