--- a/browser/js/common/directives/orderAdmin/orderAdmin.html
+++ b/browser/js/common/directives/orderAdmin/orderAdmin.html
@@ -1,9 +1,8 @@
 <div class="col-sm-6 col-md-6 col-lg-6">
 	<label>Filter Orders By Status</label>
-	<select class="form-control">
+	<select class="form-control" ng-model="orderFilter" ng-change="changeFilter()">
 		<option ng-repeat="status in orderStatus" value="{{status}}">{{status}}</option>
 	</select>
-
 	<div class="panel panel-default">
 	  <div class="panel-heading">Orders</div>
 	  <table class="table table-hover">
@@ -13,7 +12,7 @@
 	  		<th>User</th>
 	  		<th>Status</th>
 	  	</tr>
-		<tr ng-repeat="order in orders" ng-click="selectOrder(order)">
+		<tr ng-repeat="order in orders | filter:statusFilter" ng-click="selectOrder(order)">
 			<td>{{order._id}}</td>
 			<td>{{order.date | date : 'longDate'}}</td>
 			<td>{{order.userId}}</td>
@@ -38,7 +37,7 @@
 			</div>
 			<div class="pull-left admin-input-float">
 				<label>Update Order Status</label>
-				<select class="form-control" ng-model="selectedStatus" ng-change="changeStatus()">
+				<select class="form-control" ng-model="editStatus" ng-change="changeStatus()">
 					<option ng-repeat="status in editStatus" value="{{status}}">{{status}}</option>
 				</select>
 			</div>
