--- a/browser/js/common/directives/addBeerForm/addBeerForm.html
+++ b/browser/js/common/directives/addBeerForm/addBeerForm.html
@@ -1,3 +1,4 @@
+<h4>Add New Beer</h4>
 <form>
 	<div class="col-sm-6 col-md-6 col-lg-6">
 		<label for="name">Beer Name</label>
@@ -8,7 +9,6 @@
 
 		<label for="tags">Tags (comma delimited please)</label>
 		<input ng-model="editBeer.tags" class="form-control" type="text" name="tags"/>
-
 
 
 		<div>
@@ -41,6 +41,9 @@
 
 		<label for="stock">Stock</label>
 		<input ng-model="editBeer.stock" class="form-control" type="text" name="stock" required/>
+
+		<label for="photo">Photo Url</label>
+		<input ng-model="editBeer.photo" class="form-control" type="text" name="photo"/>
 	</div>
 
 	<input type="submit" class="btn btn-default submit" ng-click="update()">
