the order comfirmation updates properly

--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -20,7 +20,7 @@
                         <li ng-repeat = "item in cartObj">{{item.name}} Price: {{item.price}} Quantity: {{item.quantity}} </li>
                         <li class="divider"></li>
                         <h6>Total: {{total}}</h6>
-                        <button type = "button" class = "btn btn-warning" ui-sref="checkout">Check out!</button>
+                        <button type = "button" class = "btn btn-warning" ui-sref="checkout">View Cart</button>
                     </div>
                     <!-- <div ng-show = "user">
                         <li ng-repeat = "item in cart"></li>
