--- a/browser/js/common/directives/displayOrder/displayOrder.html
+++ b/browser/js/common/directives/displayOrder/displayOrder.html
@@ -5,5 +5,5 @@
     <button class = "btn btn-default" ng-show = "editing" ng-click = "submit(beer)">Submit</button>
     <h6>Price: {{beer.price}}</h6>
     <button class = "btn btn-default" ng-click = "showEdit(beer)">Edit</button>
-    <button class = "btn btn-default" >Delete</button>
+    <button class = "btn btn-default" ng-click = "kill(beer)">Delete</button>
 </div>
