--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -42,7 +42,7 @@
         <button ng-show="!user" ui-sref="login" class="btn login-button">Login</button>
         <div ng-show="user" class="welcome">
             <span>Welcome, {{ user.email }}!</span>
-            <a ng-click="logout()">Logout</a>
+            <button class="btn logout-button" ng-click="logout()">Logout</button>
         </div>
         <button ng-show="!user" ui-sref="signup" class="btn login-button">Sign Up</button>
     </div>
