style dropdown cart

--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -17,8 +17,8 @@
                     <div>
                         <li ng-repeat = "item in cartObj">{{item.name}} Price: {{item.price}} Quantity: {{item.quantity}} </li>
                         <li class="divider"></li>
-                        <h6>Total: {{total}}</h6>
-                        <button type = "button" class = "btn btn-warning" ui-sref="checkout">View Cart</button>
+                        <h5>Total: ${{total}}</h5>
+                        <button type = "button" class = "btn btn-default" ui-sref="checkout">View Cart</button>
                     </div>
                     <!-- <div ng-show = "user">
                         <li ng-repeat = "item in cart"></li>
