--- a/browser/js/common/directives/editBeerForm/editBeerForm.html
+++ b/browser/js/common/directives/editBeerForm/editBeerForm.html
@@ -1,4 +1,4 @@
-<form>
+<form class="admin">
 	<div class="col-sm-6 col-md-6 col-lg-6">
 		<label for="name">Beer Name</label>
 		<input ng-model="editBeer.name" class="form-control" type="text" name="name" required/>
