--- a/browser/js/common/directives/orderAdmin/orderAdmin.html
+++ b/browser/js/common/directives/orderAdmin/orderAdmin.html
@@ -1,4 +1,4 @@
-<div class="col-sm-6 col-md-6 col-lg-6">
+<div class="col-sm-8 col-md-8 col-lg-8">
 	<label>Filter Orders By Status</label>
 	<select class="form-control" ng-model="orderFilter" ng-change="changeFilter()">
 		<option ng-repeat="status in orderStatus" value="{{status}}">{{status}}</option>
@@ -21,7 +21,7 @@
 	  </table>
 	</div>
 </div>
-<div class="col-sm-6 col-md-6 col-lg-6">
+<div class="col-sm-4 col-md-4 col-lg-4">
 	<label>Edit Order</label>
 	<form>
 		<label>Id</label>
@@ -37,12 +37,12 @@
 			</div>
 			<div class="pull-left admin-input-float">
 				<label>Update Order Status</label>
-				<select class="form-control" ng-model="editStatus" ng-change="changeStatus()">
+				<select class="form-control update" ng-model="selectedStatus" ng-change="changeStatus()">
 					<option ng-repeat="status in editStatus" value="{{status}}">{{status}}</option>
 				</select>
 			</div>
 		</div>
-		<input type="submit" class="btn btn-warning submit" ng-click="updateStatus()" value="Update Status">
+		<input type="submit" class="btn btn-default submit" ng-click="updateStatus()" value="Update Status">
 	</form>
 	<alert type="success" ng-show="success">{{success}}</alert> 
 	<alert type="danger" ng-show="error">{{error}}</alert> 
